changed toList to collect in PreProcessingServiceImpl